# irpf-parser-platform

./: .env.example  .gitignore  Creación_de_PRD_para_Aplicación_Extractor_Parseador_de_Datos_Financieros (1).docx  README.md  package-lock.json  package.json  vercel.json
docs/: BASELINE_FUNCIONAL_2026-03-06.md  DIAGNOSTICO_Y_PLAN_COMPLETADO.md  ENV_PRODUCCION.md  HANDOFF_2026-03-07.md  PRD.md  PRD_REFACTORIZACION_UI_v1.0.docx  PRD_REFACTORIZACION_UI_v1.0.md  STATUS.md  (+10 more)
services/parser/: ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  railway.toml
services/parser/app/: canonical_registry.py  docling_converter.py  harvey_engine.py  main.py  parser_engine.py  schemas.py  structured_document.py
services/parser/app/data/: tc_1_1.csv
services/parser/app/engines/: __init__.py  anthropic_fallback.py  openai_universal.py
services/parser/app/engines/v3/: aduana_v2.py  extractor_legal.py  extractor_patrimonio.py  extractor_rentas.py  orchestrator.py  quality_reviewer.py
services/parser/app/exporters/: __init__.py  excel_m720_v2.py
services/parser/app/extractors/: __init__.py  base.py  citi.py  goldman.py  jpmorgan.py  llm_fallback.py  pictet.py
services/parser/app/schemas/: __init__.py  canonical_v2.py  m720_boe_v2.py
services/parser/app/services/: exchange_rates.py  model_policy.py  reasoning_loop.py
services/parser/tests/: test_aduana_v2.py  test_docling_converter.py  test_exchange_rates.py  test_extractors.py  test_openai_engine_improvements.py  test_parser_engine.py  test_quality_warnings.py  test_v3_endpoints.py  test_v3_pdf_fallback.py
(+237 files in other folders)
