[project]
name = "irpf-parser-service"
version = "0.3.0"
description = "Parser adaptativo para documentos financieros IRPF/IP"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pypdf>=5.0.0",
  "pdfplumber>=0.11.0",
  "httpx>=0.27.0",
  "openpyxl>=3.1.5",
  "xlrd>=2.0.1"
]

[dependency-groups]
dev = [
  "pytest>=8.3.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
